# RealTime-Weapons-Detection-CNN

./: CMakeLists.txt  LICENSE  README.md
python_object_detection/: streamer_demo.py  test_objects.py  train_objects.py
src/: CMakeLists.txt  tester_gun.cpp  trainer_gun.cpp
